Social follows link: fix spacing between items

--- a/src/components/Blocks/SocialFollow/index.scss
+++ b/src/components/Blocks/SocialFollow/index.scss
@@ -20,11 +20,12 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    gap: 3.125rem;
 
     a {
+      padding-left: 25px;
+      padding-right: 25px;
+
       &:not(:last-child) {
-        padding-right: 25px;
         border-right: 1px solid rgba(255, 112, 188, 0.2);
       }
 
